Fix: removed white space!

--- a/style.css
+++ b/style.css
@@ -541,7 +541,6 @@ footer {
 
 .copyright-divider {
   width: 100%; /* Ensure the divider spans the entire width */
-  margin-left: -3rem; 
   padding: 0; 
   border: none; 
   border-top: 1px solid white;
